--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,7 @@ PyJWT==2.10.1
 SQLAlchemy==2.0.41
 typing_extensions==4.14.0
 Werkzeug==3.1.3
+python-dotenv==1.0.1
+schedule==1.2.1
+requests==2.31.0
+email-validator==2.1.1
