--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,34 @@
 venv/
 __pycache__/
 *.sqlite
+*.pyc
 
+# PostgreSQL
+*.pgsql
+
+# Arquivos de migração do Flask-Migrate
+migrations/versions/
+
+# Arquivos de ambiente
+.env
+.env.local
+
+# Frontend
 frontend/node_modules/
 frontend/dist/
+frontend/.env.local
 
-.env
+# Logs
+*.log
+
+# Arquivos temporários
+*.tmp
+*.bak
+
+# Arquivos de IDE
+.vscode/
+.idea/
+*.swp
+*.swo
 
 
