--- a/render.yaml
+++ b/render.yaml
@@ -6,10 +6,10 @@ services:
     startCommand: gunicorn -c gunicorn_config.py 'src.main:app'
     envVars:
       - key: PYTHON_VERSION
-        value: "3.11.0"
+        fromString: "3.11.0"
       - key: SECRET_KEY
         generateValue: true
       - key: DATABASE_URL
         sync: false
       - key: MAX_CONTENT_LENGTH
-        value: "16777216"  # 16MB em bytes
+        fromString: "16777216"  # 16MB em bytes
