--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ services:
     startCommand: gunicorn -c gunicorn_config.py 'src.main:app'
     envVars:
       - key: PYTHON_VERSION
-        fromString: "3.11.0"
+        value: "3.11.0"
       - key: SECRET_KEY
         generateValue: true
       - key: DATABASE_URL
