--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: rec-backend
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn -c gunicorn_config.py 'src.main:app'
+    startCommand: gunicorn wsgi:app
     envVars:
       - key: PYTHON_VERSION
         value: "3.11.0"
