--- a/render.yaml
+++ b/render.yaml
@@ -22,9 +22,9 @@ services:
     envVars:
       - key: NODE_VERSION
         value: "20.11.0"
-      - key: VITE_API_URL
-        value: "https://rec-backend-ub72.onrender.com/api"
+      - key: VITE_API_BASE
+        value: "https://rec-ub72.onrender.com/api"
     routes:
       - type: rewrite
         source: /api/*
-        destination: https://rec-backend-ub72.onrender.com/api/:splat
+        destination: https://rec-ub72.onrender.com/api/:splat
