--- a/render.yaml
+++ b/render.yaml
@@ -23,8 +23,4 @@ services:
       - key: NODE_VERSION
         value: "20.11.0"
       - key: VITE_API_BASE
-        value: "https://rec-ub72.onrender.com/api"
-    routes:
-      - type: rewrite
-        source: /api/*
-        destination: https://rec-ub72.onrender.com/api/:splat
+        value: "/api"
