--- a/frontend/render.yaml
+++ b/frontend/render.yaml
@@ -25,5 +25,8 @@ services:
         source: /api/(.*)
         destination: https://rec-ub72.onrender.com/api/$1
       - type: rewrite
+        source: /api/(.*)/
+        destination: https://rec-ub72.onrender.com/api/$1
+      - type: rewrite
         source: /*
         destination: /index.html
